--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "surge": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
