--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
+    "material-ui": "^0.20.2",
     "postinstall": "^0.7.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "surge": "^0.23.1"
   },
