--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^9.0.1",
     "styled-components": "^5.3.5",
     "surge": "^0.23.1"
   },
