--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-toastify": "^9.0.1",
-    "readline": "^1.3.0",
     "styled-components": "^5.3.5",
     "surge": "^0.23.1"
   },
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "readline": "^1.3.0"
   }
 }
