--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "^0.7.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-toastify": "^9.0.1",
