--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "material-ui": "^0.20.2",
     "postinstall": "^0.7.4",
     "react": "^16.13.1",
