--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-toastify": "^9.0.1",
